# urlencode

./: CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  LICENSE  README.adoc  README.md  release.toml
src/: encode_sets.rs  main.rs
