[package]
name = "urlencode"
version = "0.1.2"
authors = ["Skyler Hawthorne <skyler@dead10ck.com>"]
description = "A CLI utility for URL-encoding or -decoding strings"
repository = "https://github.com/dead10ck/urlencode"
readme = "README.adoc"
keywords = [ "urlencode", "url", "encode", "decode", "percent" ]
categories = [ "command-line-utilities", "encoding" ]
license = "MIT"
edition = "2021"

[dependencies]
percent-encoding = "2.1.0"
clap = "3.1.18"
